--- a/README.Rmd
+++ b/README.Rmd
@@ -65,9 +65,9 @@ df <- data.frame(
 # keep alpha == 1 for all teams including an "A"
 matches <- grepl("A", team)
 df$alpha <- ifelse(matches, 1, 0.9)
-# change color of all teams including an "o" to grey
+# change color of all teams including an "o" to black and white
 matches <- grepl("o", team)
-df$color <- ifelse(matches, "grey",NA)
+df$color <- ifelse(matches, "b/w",NA)
 
  ggplot(df, aes(x = a, y = b)) +
    geom_cfb_logos(aes(team = teams, color = color, alpha = alpha), width = 0.075) +
