update via urlchecker

--- a/README.Rmd
+++ b/README.Rmd
@@ -4,7 +4,7 @@ output: github_document
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
 
-```{r, include = FALSE}
+```{r setup, include = FALSE}
 knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>",
@@ -13,7 +13,7 @@ knitr::opts_chunk$set(
 )
 ```
 
-# cfbplotR <a href='https://Kazink36.github.io/cfbplotR'><img src='man/figures/logo.png' align="right" width="25%" min-width="120px" /></a>
+# cfbplotR <a href='https://cfbplotR.sportsdataverse.org/'><img src='https://raw.githubusercontent.com/sportsdataverse/cfbplotR/main/man/figures/logo.png' align="right" width="25%" min-width="120px" /></a>
 
 <!-- badges: start -->
 <!-- [![CRAN status](https://img.shields.io/cran/v/cfbplotR?style=flat-square&logo=R&label=CRAN)](https://CRAN.R-project.org/package=cfbplotR) -->
@@ -22,7 +22,7 @@ knitr::opts_chunk$set(
 <!-- [![R-CMD-check](https://github.com/Kazink36/cfbplotR/workflows/R-CMD-check/badge.svg)](https://github.com/Kazink36/cfbplotR/actions)-->
 <!-- badges: end -->
 
-The code for this package was copied heavily from [nflplotR](https://nflverse.github.io/nflplotR/index.html) with minor changes to support college football team logos.
+The code for this package was copied heavily from [nflplotR](https://nflplotr.nflverse.com/index.html) with minor changes to support college football team logos.
 
 The goal of cfbplotR is to provide functions and geoms that help visualization of CFB related analysis. It provides a ggplot2 geom that does the heavy lifting of plotting CFB logos in high quality, with correct aspect ratio and possible transparency.
 
@@ -44,12 +44,12 @@ You can install the development version from [GitHub](https://github.com/) with:
 
 ``` r
 if (!require("remotes")) install.packages("remotes")
-remotes::install_github("Kazink36/cfbplotR")
+remotes::install_github("sportsdataverse/cfbplotR")
 ```
 
 ## Using cfbplotR
 
-[You can follow this tutorial to see several different uses for `cfbplotR`.](https://kazink36.github.io/cfbplotR/articles/tutorial.html) The key function in the package is `geom_cfb_logo()` which will add college football team logos to a ggplot.
+[You can follow this tutorial to see several different uses for `cfbplotR`.](https://cfbplotR.sportsdataverse.org/articles/tutorial.html) The key function in the package is `geom_cfb_logo()` which will add college football team logos to a ggplot.
 
 ```{r example, dpi=300}
 library(cfbplotR)
@@ -82,15 +82,15 @@ df$color <- ifelse(matches, "b/w",NA)
 The best places to get help on this package are:
 
 -   messaging [Jared Lee on twitter](https://twitter.com/JaredDLee)
--   opening [an issue](https://github.com/Kaink36/cfbplotR/issues/new/choose)
+-   opening [an issue](https://github.com/sportsdataverse/cfbplotR/issues/new/choose)
 
 ## Contributing
 
 Many hands make light work! Here are some ways you can contribute to
 this project:
 
--   You can [open an issue](https://github.com/Kazink36/cfbplotR/issues/new/choose) if you’d like to request specific data or report a bug/error.
+-   You can [open an issue](https://github.com/sportsdataverse/cfbplotR/issues/new/choose) if you’d like to request specific data or report a bug/error.
 
 ## Terms of Use
 
-The R code for this package is released as open source under the [MIT License](https://Kazink36.github.io/cfbplotR/docs/LICENSE.html). CFB data accessed by this package belong to their respective owners, and are governed by their terms of use.
+The R code for this package is released as open source under the [MIT License](https://cfbplotR.sportsdataverse.org/LICENSE.html). CFB data accessed by this package belong to their respective owners, and are governed by their terms of use.
